# crypto-bro

./: .gitignore  Cargo.toml  README.md
data/: test.txt
data/encrypted/: test.txt.locked
src/: ascii.rs  crypto_control.rs  lunchbox.rs  main.rs
src/ascii/: crsbrks.txt  fsoc.txt
src/words/: descriptors.txt  names.txt
