[package]
name = "key-gen-app"
version = "0.0.9"
edition = "2024"

[dependencies]
rand = "0.8"
openssl = "0.10"
uuid = { version = "1.0", features = ["v4"] }
ring = "0.16"
aes = "0.7"        
chacha20poly1305 = "0.8"  
hmac = "0.11"       
pbkdf2 = "0.9" 
base64 = "0.13"
clap = { version = "4.0", features = ["derive"] }
arboard = "3.2"
crossterm = "0.27"
sha2 = "0.10.9"
hex = "0.4.3"
